--- a/analysis/ec_all_drugs.ipynb
+++ b/analysis/ec_all_drugs.ipynb
@@ -84,6 +84,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1218"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "len(data_all_drugs[data_all_drugs['Status'] == 'Active'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['Active', 'Not active', 'Rejected'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "source": [
+    "data_all_drugs['Status'].unique()"
+   ]
+  },
+  {
    "source": [
     "### EC orphan drug designations"
    ],
